added company manager confirm
